--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mocha-multi": "1.0.1"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "chai-spies": "^1.0.0",
     "mocha-jsdom": "^2.0.0",
     "nock": "^10.0.2",
